Sun Jul 30 13:54:35 2000  Christopher Faylor <cgf@cygnus.com>

	* fhandler_console.cc: Remove VK_DIVIDE detection.
	(get_nonascii_key): Simplify previous patch to return ascii char if it
	is non-zero.  Add a second "temporary buffer" argument to help with
	thread safety.
	* select.cc (peek_console): Pass a temporary buffer argument to
	get_nonascii_key.

Sat Jul 29 14:32:12 2000  Christopher Faylor <cgf@cygnus.com>

	* fhandler_console.cc: Add VK_DIVIDE detection.  Return virtual keycode
	if it is not detected and it is less than ' '.

Sat Jul 29 13:33:49 2000  Christopher Faylor <cgf@cygnus.com>

	* path.cc (chdir): Avoid trailing dot calculation when chdir == '/'
	or we end up with an empty string.

Sat Jul 29 12:11:33 2000  Christopher Faylor <cgf@cygnus.com>

	* include/cygwin/version.h: Bump DLL minor version number to 5 due
	to all of the changes below.

Sat Jul 29 12:01:32 2000  Christopher Faylor <cgf@cygnus.com>

	Redefine process structure to avoid a fixed size table.  Redefine
	pinfo/_pinfo classes.  Use these throughout.
	* dcrt0.cc (dll_crt0_1): Accomodate set_myself argument change.
	(__api_fatal): Accomodate _pinfo::record_death argument change.
	* exceptions.cc (really_exit): Ditto.
	(sig_handle_tty_stop): Use pinfo constructor to access process info.
	(events_init): Don't create pinfo_mutex since it is no longer required.
	* external.cc (fillout_pinfo): Use winpids class to iterate over all
	system pids.
	(cygwin_internal): lock_pinfo_for_update and unlock_pinfo are now
	noops.
	* fhandler_termios.cc (fhandler_termios::set_ctty): Use pinfo
	constructor to access process info.
	* fork.cc (fork): Reorganize to initialize child info after the child
	has started since that is when we know the child's winpid, which is
	necessary to allocate the pinfo shared memory.
	* mmap.cc (recreate_mmaps_after_fork): Change arg type to _pinfo.
	* pinfo.cc: Rename pinfo methods to _pinfo throughout.  Eliminate
	pinfo_list stuff.